# YaAnecdoteForDeploy

./: README.md  docker-compose.yml  nginx.conf  only-front-compose.yaml  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/core/api/: urls.py
backend/core/api/v1/: urls.py
backend/core/api/v1/accounts/: handlers.py  urls.py
backend/core/api/v1/music/: classes.py  handlers.py  serializers.py  services.py  urls.py
backend/core/apps/accounts/: admin.py  models.py
backend/core/apps/accounts/migrations/: 0001_initial.py
backend/core/apps/common/: models.py
backend/core/apps/music/: admin.py  apps.py  models.py
backend/core/apps/music/migrations/: 0001_initial.py  0002_alter_track_authors_collection_and_more.py  0003_track_audio_file_alter_track_authors_collection_and_more.py  0004_alter_track_audio_file.py  0005_authorscollection_tracks_track_user_of_likes_and_more.py  0006_alter_userscollection_user.py  0007_alter_track_author.py  0008_authorscollection_user_of_likes.py  0009_alter_authorscollection_user_of_likes_and_more.py  0010_alter_authorscollection_tracks_and_more.py  0011_alter_userscollection_user.py  0012_track_duration_seconds_listeninghistory.py
backend/core/apps/products/models/: products.py
backend/core/project/: urls.py
backend/core/project/settings/: main.py
css/: App.css  AudioMusic.css  Profile.css  ProfileContainer.css  ReactAudioMusic.css  TrackBar.css  main.css
frontend/: Dockerfile  _overridedBotstrap.scss  index.html  main.scss  package-lock.json  (+2 more)
(+131 files in other folders)
